<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodStok</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="info_ini">Select an option from the menu</string>
    <string name="lista_de_almacenaje">Shelves</string>
    <string name="buscar">Search</string>
    <string name="no_articulos">No items yet</string>
    <string name="categorias">Categories</string>
    <string name="btnAgg">Spoken description for the add button</string>
    <string name="todo">TODO</string>
    <string name="nueva_catego">New Category</string>
    <string name="nameCategory">Enter category name</string>
    <string name="caduca_pronto">Expiring Soon</string>
    <string name="nombre_de_categor_a">Category Name</string>
    <string name="listo">✔</string>
    <string name="programadores">DEVELOPERS</string>
    <string name="nameC">Cesar Eduardo Silva Colocho</string>
    <string name="nameZ">Miguel Eduardo Zelaya Alvarado</string>
    <string name="nameD">Josue David Alvarado Martinez</string>
    <string name="nameJ">Jefferson Javier Avelar Arriaza</string>
    <string name="name">TODO</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="nombre_del_producto">Product Name</string>
    <string name="fecha_de_fabricaci">Manufacturing Date</string>
    <string name="fecha_de_caducidad">Expiration Date</string>
    <string name="cantidad">Quantity</string>
    <string name="escanear_c_digo_de_barras">Scan barcode</string>
    <string name="a_adir_producto">Add product</string>
    <string name="toma_una_foto_de_el_producto_a_registrar">Take a photo of the product to register</string>
    <string name="buscar2">Search</string>
    <string name="categorias2">Categories</string>
    <string name="eliminar">Delete</string>
    <string name="apellidosR">Last Name:</string>
    <string name="nombresR">First Name:</string>
    <string name="contrase_aR">Password:</string>
    <string name="correo_electronicoR">Email:</string>
    <string name="registrarseR">Sign Up</string>
    <string name="iniciar_sesi_nR">Log In</string>
    <string name="correo_electronicoS">Email:</string>
    <string name="contrase_aS">Password:</string>
    <string name="iniciar_sesi_nS">Log In</string>
    <string name="registrarseS">Sign Up</string>
    <string name="articulo">Item</string>
    <string name="fabricacionI">Manufacturing Date:</string>
    <string name="cantidads">Quantity:</string>
    <string name="caducidads">Expiration Date:</string>
    <string name="llenarnombre">"Product Name: "</string>
    <string name="llenarcategoria">"Category: "</string>
    <string name="llenarfabricacion">"Manufacturing Date: "</string>
    <string name="llenarcaducidad">"Expiration Date: "</string>
    <string name="llenarcantidad">"Quantity: "</string>
    <string name="por_favor_ingresa_todos_los_campos">Please enter all fields</string>
    <string name="credenciales_incorrectas">Incorrect credentials</string>
    <string name="error_al_obtener_el_id_del_usuario">"Error obtaining user ID: "</string>
    <string name="error_al_guardar_el_estado_de_inicio_de_sesi_n">"Error saving login state: "</string>
    <string name="error_al_verificar_las_credenciales">"Error verifying credentials: "</string>
    <string name="error_al_guardar_el_id_del_usuario">"Error saving user ID: "</string>
    <string name="por_favor_complete_todos_los_campos">Please complete all fields</string>
    <string name="la_contrase_a_debe_tener_al_menos_5_caracteres">Password must be at least 5 characters</string>
    <string name="por_favor_ingrese_un_correo_electr_nico_v_lido">Please enter a valid email</string>
    <string name="registro_exitoso">Registration successful</string>
    <string name="error_en_el_registro_int_ntalo_de_nuevo">Error in registration. Please try again</string>
    <string name="valor_no_v_lido">Invalid value</string>
    <string name="por_favor_introduce_un_nombre_de_producto_v_lido">Please enter a valid product name</string>
    <string name="por_favor_introduce_la_cantidad">Please enter the quantity</string>
    <string name="producto_agregado_correctamente">Product added successfully</string>
    <string name="error_al_agregar_el_producto">Error adding the product</string>
    <string name="carnes1">Meat</string>
    <string name="lacteos1">Dairy</string>
    <string name="vegetales1">Vegetables</string>
    <string name="fruta1">Fruit</string>
    <string name="aderezo1">Dressing</string>
    <string name="salsas1">Sauces</string>
    <string name="productos_enlatados1">Canned Products</string>
    <string name="bebidas1">Beverages</string>
    <string name="harinas1">Flours</string>
    <string name="otros1">Others</string>
    <string name="tomar_fotograf_a">Take a Photo</string>
    <string name="seleccionar_imagen">Select Image</string>
    <string name="agregar_y_mostrar_recordatorio">Add and Show Reminder</string>
    <string name="nombre_del_productoo">Product Name</string>
    <string name="cantidaddd">Quantity</string>
    <string name="eliminar_productosss">Delete Products</string>
    <string name="agregar_productooo">Add Product</string>
    <string name="tus_listass">Your Lists</string>
    <string name="guardar_lista">Save List</string>
    <string name="nombrecATE">"Name: "</string>
    <string name="fecha_de_fabricacionCATE">"Manufacturing Date: "</string>
    <string name="fecha_de_caducidadcate">"Expiration Date: "</string>
    <string name="cantidadcate">"Quantity: "</string>
    <string name="desea_eliminar_este_contactollenar">Do you want to delete this item?</string>
    <string name="sillenar">YES</string>
    <string name="nollenar">NO</string>
    <string name="canceladollenar">Cancelled</string>
    <string name="logoutllenar">Log Out</string>
    <string name="producto_eliminado_correctamente">Product deleted successfully</string>
    <string name="error_al_eliminar_el_producto">Error deleting the product</string>
    <string name="ingrese_un_valor_v_lido_en_el_campo_de_d_assss">Enter a valid value in the days field</string>
    <string name="preferencias_guardadas_correctamentesss">Preferences saved successfully</string>
    <string name="d_a_de_inicio">"Start Day: "</string>
    <string name="plazo_de_d_as">"Days Period: "</string>
    <string name="la_fecha_seleccionada_debe_ser_igual_o_posterior_a_la_fecha_actual">The selected date must be equal to or later than the current date</string>
    <string name="por_favor_selecciona_valores_v_lidos">Please select valid values</string>
    <string name="d_a_de_inicioss">"Start Day: "</string>
    <string name="plazo_de_d_assss">"Days Period: "</string>
    <string name="ya_es_d_a_de_compras">Its shopping day!</string>
    <string name="hoy_es_el_d_a_de_hacer_las_compras_que_necesitasss">Today is the day to do the shopping you need!</string>
    <string name="oks">OK</string>
    <string name="nombre">"Name: "</string>
    <string name="productodfsf">Product</string>
    <string name="cantidaddfs">Quantity</string>
    <string name="establezca_el_d_a_inicial_de_sus_compras">Set the initial day of your shopping:</string>
    <string name="ingrese_la_fechadsda">Enter the date</string>
    <string name="establezca_su_plazo_de_recordatorio">Set your reminder period:</string>
    <string name="_7_d_as">7 days</string>
    <string name="_15_d_as">15 days</string>
    <string name="_31_d_as">31 days</string>
    <string name="introduce_los_dias_que_prefieras">Enter the days you prefer:</string>
    <string name="guardar_preferencias">Save Preferences</string>
    <string name="stock_inteligente_cocina_brillante">Smart Stock, Bright Kitchen</string>
    <string name="home">Home</string>
    <string name="almacen">Storage</string>
    <string name="categoria">Category</string>
    <string name="lista_de_compras">Shopping List</string>
    <string name="cerrar_sesi_n">Log Out</string>
    <string name="salir">Exit</string>
    <string name="ingresa_la_fecha_de_fabricaci_n">Enter the manufacturing date</string>
    <string name="ingresa_la_fecha_de_caducidad">Enter the expiration date</string>
    <string name="fecha_de_caducidad_no_v_lida">Invalid expiration date</string>
    <string name="formato_de_fecha_inv_lido">Invalid date format</string>
    <string name="permiso_de_c_mara_denegado">Camera permission denied</string>
    <string name="permiso_de_almacenamiento_denegado">Storage permission denied</string>
    <string name="no_se_encontraron_datossss">No data found</string>
    <string name="no_se_encontraron_datosaC">No data found</string>
    <string name="t_dispositivo_no_soporta_el_reconocimiento_por_vozd">Your device does not support voice recognition</string>
    <string name="no_se_encontraron_datosF">No data found</string>
    <string name="ingrese_al_menos_un_productod">Please enter at least one product</string>
    <string name="ingrese_al_menos_unod">Please enter at least one</string>
    <string name="lista_agregada_correctamentess">List added successfully</string>
    <string name="error_al_agregar_la_listass">Error adding the list</string>
    <string name="redirir_a">Redirect to: ?</string>
    <string name="menu_principal">Main Menu</string>
    <string name="estanteria">Shelf</string>
    <string name="logout">Log Out</string>
    <string name="logout3">Log Out</string>
    <string name="no_se_encontraron_datos3">No data found</string>
    <string name="nombre_de_almacen">Name the storage</string>

    <string name="idioma">en-US</string>
    <string-array name="escala">
        <item>Meat</item>
        <item>Dairy</item>
        <item>Vegetables</item>
        <item>Fruit</item>
        <item>Dressing</item>
        <item>Sauces</item>
        <item>Canned Products</item>
        <item>Beverages</item>
        <item>Flours</item>
        <item>Others</item>
    </string-array>
</resources>
