<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".lista_agregar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextProduct"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/nombre_del_productoo" />

            <EditText
                android:id="@+id/editTextCantidad"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="3.5"
                android:hint="@string/cantidaddd"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAgrega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="agregarProducto"
                android:text="@string/agregar_productooo" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/aquaclaro"
                android:onClick="guardarLista"
                android:text="@string/guardar_lista" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="eliminarProductos"
                android:text="@string/eliminar_productosss" />

            <Button
                android:id="@+id/btn_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/aqua"
                android:text="@string/tus_listass" />


        </LinearLayout>


        <ListView
            android:id="@+id/listViewProducto"
            android:layout_width="match_parent"
            android:layout_height="455dp"
            android:choiceMode="multipleChoice" />

        <Button
            android:id="@+id/btn_agg_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_y_mostrar_recordatorio" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:onClick="aggRecordatorio"
        android:layout_gravity = "start">

        <include
            layout="@layout/nav_drawer"/>


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.drawerlayout.widget.DrawerLayout>
