<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Almacen">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingBottom="10dp"
        android:text="@string/lista_de_almacenaje"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:hint="@string/buscar"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/btnMicrofono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/btnMicrofono"
        android:layout_width="40dp"
        android:layout_height="47dp"
        app:srcCompat="@drawable/mic"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textViewNoArticulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:gravity="center"
        android:text="@string/no_articulos"
        android:drawablePadding="4dp"
        android:textColorHint="#757575"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ItemAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:backgroundTint="@android:color/black"
        android:contentDescription="@string/btnAgg"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/mas" />

</androidx.constraintlayout.widget.ConstraintLayout>

