<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/drawer_border"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="16dp"
        android:background="@drawable/header_bkg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >

        <!--Agregar el logo aqui-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FoodStock"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_inteligente_cocina_brillante"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/home"
            android:textSize="20sp"
            android:drawableLeft="@drawable/home"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Almacen"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/almacen"
            android:textSize="20sp"
            android:drawableLeft="@drawable/store"
            android:drawablePadding="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoria"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/categoria"
            android:textSize="20sp"
            android:drawableLeft="@drawable/category"
            android:drawablePadding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listCompras"
            android:drawableLeft="@drawable/info"
            android:drawablePadding="8dp"
            android:text="@string/lista_de_compras"
            android:textColor="@color/blue"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/blue"/>

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/exit"
            android:drawablePadding="8dp"
            android:text="@string/cerrar_sesi_n"
            android:textColor="@color/blue"
            android:textSize="20sp" />




    </LinearLayout>
    <LinearLayout
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/exit"
            android:drawablePadding="8dp"
            android:text="@string/salir"
            android:textColor="@color/blue"
            android:textSize="20sp" />




    </LinearLayout>

</LinearLayout>