<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F5F5F5">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@android:drawable/ic_menu_add">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:hint="@string/nombre_del_producto"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#757575"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@android:drawable/ic_menu_my_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvManufacturingDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/fecha_de_fabricaci"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#757575"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@android:drawable/ic_menu_my_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_edittext_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/fecha_de_caducidad"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#757575"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnDecrease"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:text="@string/menos"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_edittext_bg"
            android:hint="@string/cantidad"
            android:inputType="number"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autoSizeTextType="uniform"
            android:text="@string/mas"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/foto"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Toma una foto de el producto a registrar"
        android:textAlignment="center"
        android:textColor="#8A8686"
        android:textColorHint="#00FFFFFF" />

    <Button
        android:id="@+id/btnScanBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escanear_c_digo_de_barras"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button_bg"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_producto"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button_bg"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>